# idled-backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/agente/: fake_provider.py  model_config.py  models.py  openai_provider.py  orchestrator.py  provider.py  service.py
app/api/: chat.py  documentos.py  erp.py  projects.py  tasks.py
app/audit/: models.py  service.py
app/auth/: dependencies.py  jwt.py  models.py  roles.py  service.py
app/core/: config.py  db.py
app/documentos/: api_deps.py  chunking.py  deps.py  embedder.py  extract.py  indexing.py  models.py  (+6 more)
migrations/: env.py
mini-laravel/: .env.example  Dockerfile  composer.json
tests/: conftest.py  test_auth_service.py  test_chat_endpoint.py  test_chat_live.py  test_chat_persistence.py  test_chunking.py  test_config.py  test_dependencies.py  test_doc_tools.py  test_documentos_config.py  test_documentos_endpoint.py  test_documentos_extract.py  test_documentos_live.py  test_documentos_models.py  test_e2e_sso.py  test_embedder.py  test_erp_endpoint.py  test_erp_gateway.py  test_erp_tools.py  test_fake_provider.py  test_gestor_models.py  test_gestor_move.py  test_gestor_projects_service.py  test_gestor_statuses.py  test_gestor_tasks_service.py  test_health.py  test_indexing.py  test_jwt.py  test_model_config.py  test_models.py  test_openai_embedder.py  test_openai_provider.py  test_orchestrator.py  test_projects_endpoint.py  test_provider_types.py  test_roles.py  test_storage_integration.py  test_tasks_endpoint.py  test_tool_registry.py  test_vector_store.py  (+1 more)
(+17 files in other folders)
