[project]
name = "idled-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic-settings>=2.4",
  "pyjwt>=2.9",
  "httpx>=0.27",
  "openai>=1.40",
  "arq>=0.26",
  "qdrant-client>=1.12",
  "boto3>=1.35",
  "pypdf>=5.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6", "aiosqlite>=0.20"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "e2e: requires the running docker compose stack",
  "live: hits real LLM APIs; needs OPENAI_API_KEY",
  "integration: requires the running docker compose infra (minio, etc.)",
]

[tool.ruff]
line-length = 100
